# dynamic-UAV-topo

./: .dockerignore  .gitignore  .gitmessage-zh.txt  CMakeLists.txt  README.md
.gitea/: pull_request_template.md
.gitea/ISSUE_TEMPLATE/: 功能需求.md  缺陷报告.md
.github/workflows/: python-smoke-ci.yml
data/fds_cases/min_fire/: fds_min_fire.fds  fds_min_fire_devc_mapping.json
data/fds_samples/: fds_case_devc.sample.csv  fds_devc_mapping.sample.json  fds_fire_snapshot.sample.json  fds_fire_timeseries.sample.csv
data/fds_samples/stream/: 0001.snapshot.json  0002.snapshot.json
docker/: Dockerfile  run_fds_demo.sh
docs/: dev-progress.md  dual-view-demo.md  fds-data-contract.md  fds-fault-injection.md  fds-fire-adapter.md  fds-integration.md  fds-min-loop.md  fds-stress.md  fds-unified-scenario.md  fire-adapter-fds.md  git-flow.md  mission-status-loop.md  next-plan.md  planner-coverage.md  release-handover-2026-02-23.md  release-v1.0.0.md  release-v1.0.1.md  ricci-cuda-poc.md  ros2-dev.md  setup-and-run.md  spec.md  validation-report-2026-02-23.md
docs/examples/: fds_cells_export_sample.csv  fds_hotspots_sample.csv  fds_regions_sample.jsonl  terrain_invalid_sample.csv  terrain_occlusion_sample.csv
include/dynamic_uav_topo/: uav_manager.hpp
ros2_ws/src/swarm_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_interfaces/msg/: FireRegion.msg  FireRegionState.msg  FireState.msg  Hotspot.msg  LinkState.msg  MissionPlan.msg  MissionStatus.msg  MissionStatusItem.msg  MissionTarget.msg  SwarmState.msg  UavState.msg
ros2_ws/src/swarm_topology_analyzer/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_topology_analyzer/src/: swarm_semantic_net_node.cpp  swarm_topology_analyzer_node.cpp
ros2_ws/src/swarm_uav_manager/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_uav_manager/include/swarm_uav_manager/: uav_manager.hpp
ros2_ws/src/swarm_uav_manager/src/: swarm_uav_manager_node.cpp  uav_manager.cpp
scripts/: compare_occlusion_modes.sh  demo_common.sh  dual_view_demo_check.sh  dual_view_demo_start.sh  dual_view_demo_stop.sh  dual_view_focus_mock_server.py  dual_view_sync.py  eval_planner_coverage.py  fds_run_min_case.sh  fire_adapter_demo.py  fire_adapter_fds.py  fire_adapter_fds_core.py  fire_adapter_fds_start.sh  fire_mission_demo_check.sh  fire_mission_demo_start.sh  fire_mission_demo_stop.sh  fire_mission_fds_start.sh  fire_region_model.py  mission_planner.py  mission_status_tracker.py  p1_acceptance.sh  profile_topology_20.sh  profile_topology_terrain_csv.sh  release_smoke.sh  ricci_cuda_poc.py  ros2_build.sh  ros2_run_swarm_manager.sh  ros2_visualization_server.py  run_full_validation.sh  run_px4_swarm.sh  semantic_net_demo.sh  semantic_net_demo_stop.sh  stress_100hz.sh  stress_fds_pipeline.sh  test_fire_adapter_recovery.sh  test_occlusion_flip.sh  test_occlusion_terrain_csv.sh  test_occlusion_terrain_fallback.sh  test_occlusion_terrain_invalid.sh  visual_demo_check.sh  (+2 more)
src/node_uav_manager/: main.cpp  uav_manager.cpp
tests/: test_demo_scripts.sh  test_dual_view_sync.py  test_fire_adapter_fds_core.py  test_fire_region_model.py  test_mission_planner.py  test_ricci_cuda_poc.py  test_uav_manager.cpp
web/: cesium_deck.html  index.html
